ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: siva-k8s-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: coffee-service
          servicePort: 3000
        path: /coffee-service/(.*)
